--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
       <form action="" method="" >
-            <label for='name'>first name</label>
+            <label for='name'>first name sumit</label>
             <input type="text" name="name" id="name"  >
             <br>
             <p>password</p>
